<resources>
    <string name="app_name">Tingle</string>
    <string name="lbl_last_added">Last Added</string>
    <string name="lbl_what">What thing</string>
    <string name="lbl_where">Where</string>
    <string name="btn_new">Add new thing</string>
    <string name="btn_list">List things</string>
    <string name="dialog_delete_thing">Delete thing</string>
    <string name="dialog_delete_thing_desc">Are you sure you want to delete this item?</string>
</resources>
