<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tingle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    tools:context="dk.itk.vongrad.tingle.TingleActivity"
    android:background="@android:color/darker_gray">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:text="@string/lbl_last_added" />

        <EditText
            android:enabled="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_weight="3"
            android:id="@+id/edt_last" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/lbl_what"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

        <EditText
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edt_what"
            android:layout_weight="3"
            android:layout_width="0dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/lbl_where"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_weight="1"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edt_where"
            android:layout_weight="3" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:showDividers="middle"
        android:gravity="center">

        <Button
            android:text="@string/btn_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_new"
            android:background="@color/colorAccent"
            android:textColor="@android:color/background_light"
            android:padding="10dp" />

        <Button
            android:text="@string/btn_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_list"
            android:background="@color/colorAccent"
            android:textColor="@android:color/background_light"
            android:padding="10dp" />
    </LinearLayout>

</LinearLayout>
